--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,17 @@
-# config/database.yml
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+development:
+  <<: *default
+  database: myapp_development
+
+test:
+  <<: *default
+  database: myapp_test
 
 production:
   <<: *default
   url: <%= ENV["DATABASE_URL"] %>
-
-  # Add this line below
   cable: { url: <%= ENV["DATABASE_URL"] %> }
