--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,4 @@
+# PostgreSQL.
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -5,11 +6,11 @@ default: &default
 
 development:
   <<: *default
-  database: myapp_development
+  database: myapp_development # Change this to your actual dev db name
 
 test:
   <<: *default
-  database: myapp_test
+  database: myapp_test # Change this to your actual test db name
 
 production:
   <<: *default
